<resources>

    <!-- Strings Generales-->
    <string name="app_name">Bluetooth Tool</string>
    <string name="action_settings">Settings</string>
    <string name="derechos">Copyright (c) 2015 Miguel Palacios. All rights reserved.</string>
    <string name="toast_bluetooth_null">Móvil sin Bluetooth</string>
    <string name="toast_bluetooth_encendido">Bluetooth encendido</string>
    <string name="toast_bluetooth_apagado">El Bluetooth no se encendio</string>
    <string name="toast_bluetooth_desactivado">Bluetooth desactivado</string>
    <string name="toast_no_cuenta_con_ble">Lo sentimos, tu móvil no cuenta con Bluetooth 4.0</string>
    <string name="toast_sin_conexion">"No esta conectado"</string>
    <!-- terminan strings-->

    <!-- Strings de NavigationDrawer-->
    <string name="busqueda">Buscar bluetooth</string>
    <string name="configuracion">Configuración</string>
    <string name="ayuda">Ayuda</string>
    <string name="salir">Salir</string>
    <!-- terminan strings-->

    <!-- Strings de ActivityPrincipal-->
    <string name="activity_principal_titulo">Bluetooth Tool</string>
    <string name="datos_del_bluetooth">DATOS DEL BLUETOOTH</string>
    <string name="nombre_dispositivo">Nombre:</string>
    <string name="tipo_dispositio">Tipo:</string>
    <string name="mac_dispositivo">MAC:</string>
    <string name="boton_conectar">CONECTAR</string>
    <string name="bluetooth_clasico">Clasico</string>
    <string name="bluetooth_low_energy">Low Energy</string>
    <!-- terminan strings-->

    <!-- Strings AdminScanBluetooth-->
    <string name="admin_scan_bluetooth_no_dispositivos">No se encontraron dispositivos</string>
    <!-- terminan strings-->

    <!-- Strings ServiceBluetoothClasico -->
    <string name="toast_conexion_perdida">Se perdio la conexión</string>
    <string name="toast_error_conexion">Error de conexión</string>
    <!-- terminan strings-->

    <!-- Strings ActivityConexionBluetooth -->
    <string name="title_activity_activity_conexion">Conexión Bluetooth</string>
    <string name="cardview_terminal">TERMINAL</string>
    <string name="cardview_general">GENERAL</string>
    <string name="cardview_joystick">JOYSTICK</string>
    <!-- terminan strings-->

    <!-- Strings ActivityTerminal-->
    <string name="title_activity_activity_terminal">Terminal</string>
    <string name="enviar">Enviar</string>
    <!-- terminan strings-->

    <!-- Strings ActivityGenaral-->
    <string name="title_activity_activity_general">General</string>
    <string name="cardview_general_salida_serial">Salida Serial</string>
    <string name="cardview_general_entrada_serial">Entrada Serial</string>
    <string name="nombre_general_boton_1">Boton \n 1 </string>
    <string name="nombre_general_boton_2">Boton \n 2 </string>
    <string name="nombre_general_boton_3">Boton \n 3 </string>
    <string name="nombre_general_boton_4">Boton \n 4 </string>
    <string name="nombre_general_boton_5">Boton \n 5 </string>
    <string name="nombre_general_boton_6">Boton \n 6 </string>
    <string name="nombre_general_boton_7">Boton \n 7 </string>
    <string name="nombre_general_boton_8">Boton \n 8 </string>
    <string name="nombre_general_boton_9">Boton \n 9 </string>
    <!-- terminan strings-->

    <!-- Strings ActivityJoystick-->
    <string name="title_activity_activity_joystick">Joystick</string>
    <string name="nombre_joystick_boton_y">Y</string>
    <string name="nombre_joystick_boton_x">X</string>
    <string name="nombre_joystick_boton_a">A</string>
    <string name="nombre_joystick_boton_b">B</string>
    <string name="cardview_joystick_entrada_serial">Entrada Serial:</string>
    <!-- terminan strings-->

    <!-- Strings ActivityAyuda-->
    <string name="title_activity_activity_ayuda">Ayuda</string>
    <string name="descripcion_bluetoothtool">Bluetooth Tool \u0020es \u0020una \u0020aplicación\npara \u0020realizar pequeños
proyectos\nutilizando una conexión Bluetooth teniendo \u0020como \u0020objetivo un mejor \ncontrol con la APP.</string>
    <string name="ayuda_buscar_bluetooth">¿Buscar Bluetooth?</string>
    <string name="ayuda_conexion_bluetooth">¿Conexión Bluetooth?</string>
    <string name="ayuda_terminal">¿Terminal?</string>
    <string name="ayuda_general">¿General?</string>
    <string name="ayuda_Joystick">¿Joystick?</string>
    <string name="ayuda_configuracion">¿Configuración?</string>
    <string name="ayuda_button_cerrar">Cerrar</string>

    <string-array name="ayuda_busqueda">
        <item>Esta es la pantalla principal de la App donde\naparacen los dispositivos Bluetooth visibles</item>
        <item>Para comenzar la búsqueda solo tienes que\npresionar el botón con la lupa</item>
        <item>Cuando selecciones un dispositivo de la\nlista aparecerá su nombre, mac y tipo de\nBluetooth</item>
        <item>Al presionar el botón conectar nos mandara\na la pantalla de conexión</item>
    </string-array>

    <string-array name="ayuda_conexion">
        <item>Esta pantalla contiene 3 opciones que son\nTerminal, Joystick y General</item>
        <item>Cada opción es una pantalla diferente, solo\nselecciona una y tu \u0020móvil \u0020se \u0020conectara \u0020al\ndispositivo Bluetooth antes seleccionado</item>
    </string-array>

    <string-array name="ayuda_terminal">
        <item>Terminal es una forma de chat entre tu móvil\ny el dispositivo Bluetooth</item>
        <item>Lo que tu envíes y recibas aparecerá en la\npantalla</item>
    </string-array>

    <string-array name="ayuda_General">
        <item>General \u0020es \u0020una \u0020forma \u0020más \u0020\u0020completa \u0020de\ncomunicación ya que cuenta con 9 botones\npara enviar diferentes datos</item>
        <item>Además cuenta con una barra que puede\nenviar \u0020números \u0020dentro \u0020de un rango por\nejemplo para una salida PWM</item>
        <item>General \u0020cuenta \u0020con un visor de lo que se\nrecibe por parte del dispositivo Bluetooth</item>
    </string-array>

    <string-array name="ayuda_joystick">
        <item>Joystick simula una palanca que puede\nmoverse \u0020libremente \u0020dentro \u0020de un área\ncircular</item>
        <item>Cuenta con 4 botones para enviar distintos\nparametros y un visor de entrada de datos</item>
    </string-array>

    <string-array name="ayuda_configuraciones">
        <item>Las pantallas Terminal, General y Joystick\ncuentan con configuraciones</item>
        <item>Las configuraciones son para determinar\nque \u0020datos \u0020se \u0020enviaran \u0020al realizar cierta\nacción</item>
        <item>También \u0020\u0020puede \u0020\u0020activar \u0020algunos \u0020datos\nextras para mejorar el control con la App\n, todo depende de lo que necesites</item>
    </string-array>
    <!-- terminan strings-->
</resources>
