<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.ActivityGeneral"
    tools:showIn="@layout/content_activity_general"
    android:background="@color/window_background"
    android:id="@+id/actividad_general"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/FrameLayoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="?attr/colorPrimaryDark"/>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/cardView1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cardview_general_salida_serial"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:id="@+id/textView"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombre_general_boton_1"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:id="@+id/button1"
                        android:background="@android:drawable/editbox_dropdown_light_frame"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombre_general_boton_2"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:id="@+id/button2" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombre_general_boton_3"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:id="@+id/button3" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombre_general_boton_4"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:id="@+id/button4" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombre_general_boton_5"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:id="@+id/button5" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombre_general_boton_6"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:id="@+id/button6" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombre_general_boton_7"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:id="@+id/button7" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombre_general_boton_8"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:id="@+id/button8" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombre_general_boton_9"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:id="@+id/button9" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1">
                    <SeekBar
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:max="100"
                        android:thumb="@android:drawable/radiobutton_off_background"
                        android:id="@+id/seekBar"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="1000"
                        android:id="@+id/textViewValor"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="30dp"
            android:id="@+id/cardView2">
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cardview_general_entrada_serial"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:id="@+id/textView2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:id="@+id/textViewEntrada"
                    android:layout_weight="1" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>