<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.ActivityJoystick"
    tools:showIn="@layout/content_activity_joystick"
    android:background="@color/window_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/FrameLayoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="?attr/colorPrimaryDark"/>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/relativeLayoutJoystick"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="130dp"
            android:background="@drawable/area_circle" >
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <Button
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/nombre_joystick_boton_y"
                android:textSize="25sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="@drawable/buttony_click"
                android:id="@+id/buttonY"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">
                <Button
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/nombre_joystick_boton_x"
                    android:textSize="25sp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:background="@drawable/buttonx_click"
                    android:id="@+id/buttonX" />

                <Button
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/nombre_joystick_boton_b"
                    android:textSize="25sp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:background="@drawable/buttonb_click"
                    android:id="@+id/buttonB" />
            </LinearLayout>

            <Button
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/nombre_joystick_boton_a"
                android:textSize="25sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="@drawable/buttona_click"
                android:id="@+id/buttonA"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="60dp"
        android:id="@+id/cardView2">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cardview_joystick_entrada_serial"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:id="@+id/textView5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:id="@+id/textViewEntrada" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
